<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:background="@drawable/gradient_primary_background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_login"
        android:gravity="center_horizontal"
        android:textColor="@color/text_standard_color"
        android:textSize="@dimen/text_size_short_titles"
        android:fontFamily="@font/magnolia_script"
        android:layout_marginTop="@dimen/margin_top_title"
        android:textStyle="bold"
        />
    <ProgressBar
        android:id="@+id/Progress_bar_login"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"
        />
    <EditText
        android:id="@+id/Et_email_login"
        android:padding="@dimen/padding_text_primary"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal_buttons"
        android:layout_marginTop="@dimen/margin_bottom_title"
        android:textSize="@dimen/text_size_edittext_large"
        android:textColor="@color/text_standard_color"
        android:hint="@string/hint_email_edittext"
        android:background="@drawable/gradient_edittexts"
        android:maxLength="100"
        />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <EditText

        android:id="@+id/Et_password_login"
        android:padding="@dimen/padding_text_primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal_buttons"
        android:layout_marginTop="@dimen/margin_bottom_title"
        android:textSize="@dimen/text_size_edittext_large"
        android:textColor="@color/text_standard_color"
        android:hint="@string/hint_password_edittext"
        android:background="@drawable/gradient_edittexts"
        android:inputType="textPassword"
        android:maxLength="16"
        />
        <ImageView
            android:id="@+id/Btn_show_pass"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="35dp"
            android:alpha=".5"
            android:onClick="ShowPassword"
            android:paddingTop="30dp"
            android:src="@drawable/eye_open"/>

    </RelativeLayout>
    <Button
        android:onClick="LoginButton"
        android:padding="@dimen/padding_text_primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal_buttons"
        android:layout_marginTop="@dimen/margin_bottom_title"
        android:textSize="@dimen/text_size_buttons"
        android:textColor="@color/text_standard_color"
        android:text="@string/login_activity_button"
        android:background="@color/background_button"
        />
    <!-- <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:layout_marginHorizontal="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp" />  -->
    <Button
        android:onClick="ForgotButton"
        android:padding="@dimen/padding_text_primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal_buttons"
        android:layout_marginTop="@dimen/margin_bottom_title"
        android:textSize="@dimen/text_size_buttons_smaller"
        android:textColor="@color/text_standard_color"
        android:text="@string/forgot_password"
        android:background="@color/background_button"
        android:layout_gravity="end"
        android:alpha="0.85"
        />
</LinearLayout>