<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity"
    android:orientation="vertical"
    android:background="@drawable/gradient_primary_background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_register"
        android:gravity="center_horizontal"
        android:textColor="@color/text_standard_color"
        android:textSize="@dimen/text_size_short_titles"
        android:fontFamily="@font/magnolia_script"
        android:layout_marginTop="@dimen/margin_top_title"
        android:textStyle="bold"
        />
    <ProgressBar
        android:id="@+id/Progress_bar_registration"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"
        />
    <EditText
        android:id="@+id/Et_name_registration"
        android:padding="@dimen/padding_text_primary"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal_buttons"
        android:layout_marginTop="@dimen/margin_bottom_title"
        android:textSize="@dimen/text_size_edittext_large"
        android:textColor="@color/text_standard_color"
        android:hint="@string/hint_name_edittext"
        android:background="@drawable/gradient_edittexts"
        android:maxLength="16"
         />
    <EditText
        android:id="@+id/Et_email_registration"
        android:padding="@dimen/padding_text_primary"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal_buttons"
        android:layout_marginTop="@dimen/margin_bottom_title"
        android:textSize="@dimen/text_size_edittext_large"
        android:textColor="@color/text_standard_color"
        android:hint="@string/hint_email_edittext"
        android:background="@drawable/gradient_edittexts"
        android:maxLength="100"
        />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/Et_password_registration"
            android:padding="@dimen/padding_text_primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_horizontal_buttons"
            android:layout_marginTop="@dimen/margin_bottom_title"
            android:textSize="@dimen/text_size_edittext_large"
            android:textColor="@color/text_standard_color"
            android:hint="@string/hint_password_edittext"
            android:background="@drawable/gradient_edittexts"
            android:inputType="textPassword"
            android:maxLength="18"
            />

        <ImageView
            android:id="@+id/Btn_show_pass"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="35dp"
            android:alpha=".5"
            android:onClick="ShowPassword"
            android:paddingTop="30dp"
            android:src="@drawable/eye_open"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/Et_password_registration_repeat"
            android:padding="@dimen/padding_text_primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_horizontal_buttons"
            android:layout_marginTop="@dimen/margin_bottom_title"
            android:textSize="@dimen/text_size_edittext_large"
            android:textColor="@color/text_standard_color"
            android:hint="@string/hint_password_edittext_repeat"
            android:background="@drawable/gradient_edittexts"
            android:inputType="textPassword"
            android:maxLength="18"
            />
        <ImageView
            android:id="@+id/Btn_show_pass_repeat"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="35dp"
            android:alpha=".5"
            android:onClick="ShowPassword"
            android:paddingTop="30dp"
            android:src="@drawable/eye_open"/>
    </RelativeLayout>

    <Button
        android:onClick="RegistrationButton"
        android:padding="@dimen/padding_text_primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal_buttons"
        android:layout_marginTop="@dimen/margin_bottom_title"
        android:textSize="@dimen/text_size_buttons"
        android:textColor="@color/text_standard_color"
        android:text="@string/registration_activity_register_btn"
        android:background="@color/background_button"
        />

    <TextView
        android:id="@+id/TV_check_busy_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:visibility="invisible"/>



</LinearLayout>

