<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/gradient_primary_background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_title"
        android:gravity="center_horizontal"
        android:textColor="@color/text_standard_color"
        android:textSize="@dimen/text_size_titles"
        android:fontFamily="@font/magnolia_script"
        android:layout_marginTop="@dimen/margin_top_title"
        android:textStyle="bold"
        />
    <Button
        android:padding="@dimen/padding_text_primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text_standard_color"
        android:text="@string/main_activity_login"
        android:textSize="@dimen/text_size_buttons"
        android:layout_marginHorizontal="@dimen/margin_horizontal_buttons"
        android:layout_marginTop="@dimen/margin_bottom_title"
        android:background="@color/background_button"
        android:onClick="Login"
        />
    <Button
        android:padding="@dimen/padding_text_primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text_standard_color"
        android:text="@string/main_activity_register"
        android:textSize="@dimen/text_size_buttons"
        android:layout_marginHorizontal="@dimen/margin_horizontal_buttons"
        android:layout_marginTop="@dimen/margin_bottom_title"
        android:background="@color/background_button"
        android:onClick="Registration"
        />
    <Button
        android:id="@+id/main_light_night_button"
        android:padding="@dimen/padding_text_primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text_standard_color"
        android:text=""
        android:textSize="@dimen/text_size_buttons"
        android:layout_marginHorizontal="@dimen/margin_horizontal_buttons"
        android:layout_marginTop="@dimen/margin_bottom_title"
        android:background="@color/background_button"
        android:onClick="LightNightMode"
        />
</LinearLayout>