<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangeEmailActivity"
    android:orientation="vertical"
    android:background="@drawable/gradient_primary_background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_email"
        android:gravity="center_horizontal"
        android:textColor="@color/text_standard_color"
        android:textSize="@dimen/text_size_short_titles"
        android:fontFamily="@font/magnolia_script"
        android:layout_marginTop="@dimen/margin_top_title"
        android:textStyle="bold"
        />
    <ProgressBar
        android:id="@+id/Progress_bar_change_email"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"
        />

    <EditText
        android:id="@+id/Et_email_change_email"
        android:padding="@dimen/padding_text_primary"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal_buttons"
        android:layout_marginTop="@dimen/margin_bottom_title"
        android:textSize="@dimen/text_size_edittext_large"
        android:textColor="@color/text_standard_color"
        android:hint="@string/hint_email_edittext"
        android:background="@drawable/gradient_edittexts"
        />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/Et_password_change_email"
            android:padding="@dimen/padding_text_primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_horizontal_buttons"
            android:layout_marginTop="@dimen/margin_bottom_title"
            android:textSize="@dimen/text_size_edittext_large"
            android:textColor="@color/text_standard_color"
            android:hint="@string/hint_password_edittext"
            android:background="@drawable/gradient_edittexts"
            android:inputType="textPassword"
            android:maxLength="16"
            />

        <ImageView
            android:id="@+id/Btn_show_pass_old_in_email"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="35dp"
            android:alpha=".5"
            android:onClick="ShowPassword"
            android:paddingTop="30dp"
            android:src="@drawable/eye_open" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/Et_new_email_enter"
            android:padding="@dimen/padding_text_primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_marginHorizontal="@dimen/margin_horizontal_buttons"
            android:layout_marginTop="@dimen/margin_bottom_title"
            android:textSize="@dimen/text_size_edittext_large"
            android:textColor="@color/text_standard_color"
            android:hint="@string/enter_new_email"
            android:background="@drawable/gradient_edittexts"

            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/Et_new_email_repeat"
            android:padding="@dimen/padding_text_primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_horizontal_buttons"
            android:layout_marginTop="@dimen/margin_bottom_title"
            android:textSize="@dimen/text_size_edittext_large"
            android:textColor="@color/text_standard_color"
            android:hint="@string/repeat_new_email"
            android:background="@drawable/gradient_edittexts"
            android:inputType="textEmailAddress"
            />
    </RelativeLayout>

    <Button
        android:onClick="ChangeEmailButton"
        android:padding="@dimen/padding_text_primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal_buttons"
        android:layout_marginTop="@dimen/margin_bottom_title"
        android:textSize="@dimen/text_size_buttons"
        android:textColor="@color/text_standard_color"
        android:text="@string/change_email"
        android:background="@color/background_button"
        />

</LinearLayout>